# resource_management

./: LICENSE  README.md
examples/: CMakeLists.txt  Makefile  atomic_operation_tests.cpp  mutex.c  open_file  open_file.cpp  shared_resource_tests.cpp  test2
include/: mutex.h  res_mgr_atomic.hpp  res_mgr_atomic_windows.hpp  res_mgr_lock.hpp  res_mgr_lock_cs_windows.hpp  res_mgr_lock_mutex_windows.hpp  res_mgr_resource.hpp  res_mgr_resource_windows.hpp  res_mgr_shared.hpp
